--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
                <div class="row">
                 <div class="col-lg-4 col-sm-6 mb-4">
-                  <div class="card h-100">
+                  <div class=" h-100">
                     <a href="#"><img class="card-img-top" src="img/Home-01.jpg" alt=""></a>
                     <div class="card-body">
                       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
@@ -221,24 +221,21 @@
                   </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-4">
-                  <div class="card h-100">
+                  <div class=" h-100">
                     <a href="#"><img class="card-img-top" src="img/Home-02.jpg" alt=""></a>
                     <div class="card-body">
-                      <h4 class="card-title">
-                        <a href="#">Project Two</a>
-                      </h4>
                       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio, gravida pellentesque urna varius vitae.</p>
+                      <button>Mas Informacion</button>
                     </div>
                   </div>
                 </div>
                 <div class="col-lg-4 col-sm-6 mb-4">
-                  <div class="card h-100">
+                  <div class="h-100">
                     <a href="#"><img class="card-img-top" src="img/Home-03.jpg" alt=""></a>
                     <div class="card-body">
-                      <h4 class="card-title">
-                        <a href="#">Project Three</a>
-                      </h4>
+                      
                       <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
+                      <button>Mas Informacion</button>
                     </div>
                   </div>
                 </div>
