--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </div>
 </nav>
     <!--Carusel fotos home-->
-<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide" data-interval="false" data-ride="carousel">
     <!-- Lineas de referencia posicion -->
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
