sacando logo del footer a el bread

--- a/index.html
+++ b/index.html
@@ -368,15 +368,17 @@
 <footer>
     <aside>
         <h3>Contacto</h3>
+<!--
         <button>Contrata un servicio</button>
         <button>Trabaja con nosotros</button>
         <button>Invierte en Healthic</button>
+-->
         <address>
             <p>
                 Álvaro Obregón 213, Col. Roma Norte, C.P. 06700, <br>Alcaldía Cuauhtémoc, CDMX, México.
             </p>
-            <a href="tel:+525561008640">+52 55 6100 8640</a>
-            <a href="mailto:info@healthic.com.mx">info@healthic.com.mx</a>    
+            <a href="tel:+525561008640" class="linkfoot">+52 55 6100 8640</a>
+            <a href="mailto:info@healthic.com.mx" class="linkfoot">info@healthic.com.mx</a>    
         </address>
         <div class="socialicons">
             <?xml version="1.0" encoding="UTF-8"?>
@@ -420,7 +422,7 @@
 </svg>
 
         </div>
-        <img src="img/logo02.png" class="imgfooter">
+<!--        <img src="img/logo02.png" class="imgfooter">-->
     </aside>
     <form>
      <div class="form-group">
@@ -444,7 +446,9 @@
 </form>
   
    </footer>
+   <img src="img/logo02.png" class="imgfooter">
 <div class="bread">
+     
       <div class="links">
           <a href="#" class="bredtitulo">Quienes Somos</a>
           <a href="#">Nosotros</a>
