--- a/index.html
+++ b/index.html
@@ -80,6 +80,16 @@
         <button>Más información</button>
       </div>
     </div>
+    <!--  Foto 05  -->
+<!--
+    <div class="carousel-item">
+      <iframe src="https://player.vimeo.com/video/457958887" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+      <div class="carousel-caption d-none d-md-block">
+        <h1>La primera central de esterilización externa en México</h1>
+        <button>Más información</button>
+      </div>
+    </div>
+-->
   </div>
 <!--  Flechas controladoras carusel-->
   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
