--- a/nosotros.html
+++ b/nosotros.html
@@ -11,7 +11,33 @@
 <!--     <link rel="stylesheet" href="css/debug.css"> -->
 </head>
 <body>
-   <nav>helllo hello gllo</nav>
+     <!-- Navigation -->
+<nav class="navbar fixed-top  navbar-expand-md">
+    <a href="#" class="navbar-brand"><img src="img/logohealthic.png" class="navbar-brand-imagen"></a>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#NavBarM">
+        <img src="img/logohealthic.png" class="enmobilhey">
+    </button>
+    <div class="collapse navbar-collapse" id="NavBarM">
+    
+    <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+            <a href="nosotros.html" class="nav-link">Quiénes somos</a>
+        </li>
+        <li>
+            <a href="#" class="nav-link">Esterilización</a>
+        </li>
+        <li>
+            <a href="#" class="nav-link">Desinfección</a>
+        </li>
+        <li>
+            <a href="#" class="nav-link">Biblioteca</a>
+        </li>
+        <li>
+            <a href="#" class="nav-link">Contacto</a>
+        </li>
+    </ul>
+    </div>
+</nav>
    
    <header class="Hstart">
        <iframe width="100%" height="600" src="https://www.youtube.com/embed/pJxGCAg1LZw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -444,5 +470,6 @@ Fue en diciembre de 2017 cuando Healthic se puso en marcha en la mente de su fun
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
