completando toda la info de biodes

--- a/biodesinfeccion.html
+++ b/biodesinfeccion.html
@@ -112,7 +112,7 @@
    
    <article class="Historia">
       <div>
-       <h3>Solución</h3>
+       <h3 class="tituloSolucion">Solución</h3>
        <p>
         Nuestro servicio de bio-desinfección es un proceso automatizado para desinfectar y descontaminar cualquier espacio, mediante el uso de vapor de peróxido de hidrógeno.<br><br>
  
@@ -206,6 +206,18 @@
 </div>
    
     </figure>
+        <a href="#" class="botonLink">Ficha Tecnica</a>
+   </article>
+   <article class="beneficios">
+       <h3>Beneficios</h3>
+       <ul>
+           <li>No representa riesgos para los seres humanos ni para el medio ambiente.<br><br></li>
+           <li>No tóxico <br><br></li>
+           <li>No alergénico<br><br></li>
+           <li>No oxidante<br><br></li>
+           <li>No crea resistencia de gérmenes<br><br></li>
+           <li>Proceso certificado (ISO 13485) en cumplimiento con los últimos estándares.</li>
+       </ul>
    </article>
     
     <div class="bread">
