informacion y estilos para estirilizacion

--- a/index.html
+++ b/index.html
@@ -24,14 +24,16 @@
             <a href="nosotros.html" class="nav-link">Quiénes somos</a>
         </li>
         <li>
-            <a href="#" class="nav-link">Esterilización</a>
+            <a href="esterilizacion.html" class="nav-link">Esterilización</a>
         </li>
         <li>
-            <a href="#" class="nav-link">Desinfección</a>
+            <a href="biodesinfeccion.html" class="nav-link">Desinfección</a>
         </li>
+<!--
         <li>
             <a href="#" class="nav-link">Biblioteca</a>
         </li>
+-->
         <li>
             <a href="#" class="nav-link">Contacto</a>
         </li>
