--- a/nosotros.html
+++ b/nosotros.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Document</title>
+    <title>Healthic</title>
     <link rel="stylesheet" href="css/slider.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -24,14 +24,16 @@
             <a href="nosotros.html" class="nav-link">Quiénes somos</a>
         </li>
         <li>
-            <a href="#" class="nav-link">Esterilización</a>
+            <a href="esterilizacion.html" class="nav-link">Esterilización</a>
         </li>
         <li>
-            <a href="#" class="nav-link">Desinfección</a>
+            <a href="biodesinfeccion.html" class="nav-link">Desinfección</a>
         </li>
+<!--
         <li>
             <a href="#" class="nav-link">Biblioteca</a>
         </li>
+-->
         <li>
             <a href="#" class="nav-link">Contacto</a>
         </li>
