--- a/esterilizacion.html
+++ b/esterilizacion.html
@@ -13,7 +13,7 @@
 <body>
      <!-- Navigation -->
 <nav class="navbar fixed-top  navbar-expand-md">
-    <a href="#" class="navbar-brand"><img src="img/logohealthic.png" class="navbar-brand-imagen"></a>
+    <a href="index.html" class="navbar-brand"><img src="img/logohealthic.png" class="navbar-brand-imagen"></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#NavBarM">
         <img src="img/logohealthic.png" class="enmobilhey">
     </button>
