agregando margenes al bread y acomodando titulos a informacion final en sliders

--- a/biodesinfeccion.html
+++ b/biodesinfeccion.html
@@ -24,10 +24,10 @@
             <a href="nosotros.html" class="nav-link">Quiénes somos</a>
         </li>
         <li>
-            <a href="#" class="nav-link">Esterilización</a>
+            <a href="esterilizacion.html" class="nav-link">Esterilización</a>
         </li>
         <li>
-            <a href="#" class="nav-link">Desinfección</a>
+            <a href="biodesinfeccion.html" class="nav-link">Desinfección</a>
         </li>
 <!--
         <li>
@@ -221,37 +221,42 @@
    </article>
     
     <div class="bread">
+     
       <div class="links">
-          <a href="#">Quienes Somos</a>
+          <a href="#" class="bredtitulo">Quienes Somos</a>
           <a href="#">Nosotros</a>
-          <a href="#">historia</a>
-          <a href="#">Equipo</a>
+          <a href="#">Historia</a>
+<!--          <a href="#">Equipo</a>-->
       </div>
       <div class="links">
-          <a href="#">Esterilización</a>
-          <a href="#">Proceso</a>
+          <a href="#" class="bredtitulo">Esterilización</a>
+          <a href="#">Problemática</a>
+          <a href="#">Solución</a>
           <a href="#">Beneficios</a>
-          <a href="#">Contratación</a>
       </div>
       <div class="links">
-          <a href="#">Desinfección</a>
-          <a href="#">Proceso</a>
+          <a href="#" class="bredtitulo">Desinfección</a>
+          <a href="#">Problemática</a>
+          <a href="#">Solución</a>
           <a href="#">Beneficios</a>
-          <a href="#">Contratación</a>
       </div>
+<!--
       <div class="links">
-          <a href="#">Biblioteca</a>
+          <a href="#" class="bredtitulo">Biblioteca</a>
           <a href="#">Noticias</a>
           <a href="#">Galeria</a>
           <a href="#">Fichas técnicas</a>
           <a href="#">Prensa</a>
       </div>
+-->
+<!--
       <div class="links">
           <a href="#">Contrata un servicio</a>
           <a href="#">Invierte en Healthic</a>
           <a href="#">Trabaja con Nosotros</a>
       </div>
-      <div class="links">
+-->
+      <div class="links ultimis">
           <p>Healthic ® 2020</p>
       </div>
   </div>
