--- a/nosotros.html
+++ b/nosotros.html
@@ -55,32 +55,32 @@
     <div class="carousel-item active">
       <img src="img/Home-01.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block">
-        <h1>La primera central de esterilización externa en México</h1>
-        <button>Mas Información</button>
+        <h1>Quiénes somos</h1>
+<!--        <button>Mas Información</button>-->
       </div>
     </div>
 <!--    Foto 02  -->
     <div class="carousel-item">
       <img src="img/Home-02.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption  d-md-block">
-        <h1>Líderes en bio-desinfección de superficifes para cualquier sector o espacio.</h1>
-        <button>Más información</button>
+        <h1>Quiénes somos</h1>
+<!--        <button>Más información</button>-->
       </div>
     </div>
 <!--  Foto 03  -->
     <div class="carousel-item">
       <img src="img/Home-03.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption  d-md-block">
-        <h1>La primera central de esterilización externa en México</h1>
-        <button>Más información</button>
+        <h1>Quiénes somos</h1>
+<!--        <button>Más información</button>-->
       </div>
     </div>
 <!--  Foto 04  -->
     <div class="carousel-item">
       <img src="img/Home-04.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
-        <h1>La primera central de esterilización externa en México</h1>
-        <button>Más información</button>
+        <h1>Quiénes somos</h1>
+<!--        <button>Más información</button>-->
       </div>
     </div>
     <!--  Foto 05  -->
@@ -120,8 +120,8 @@
         Manifiesto
        </h3>
        <p>
-            Conocemos el valor de la vida, por ellos tenemos la convicción de llevar bienestar a cualquier lugar que llegamos.<br><br>
-            Interactuamos armónicamente en sistemas a través del equilibrio y la ética con la que damos cada paso. <br><br>
+            Conocemos el valor de la vida, por ellos tenemos la convicción de llevar bienestar a cualquier lugar que llegamos.<br>
+            Interactuamos armónicamente en sistemas a través del equilibrio y la ética con la que damos cada paso. <br>
             Confianza es lo que ponen los clientes en nuestras manos, respondemos con certeza que se traduce en procesos seguros, calidad excepcional y seguridad en todo procedimiento en el que intervenimos. <br> 
        </p>
        <h3>
@@ -503,37 +503,42 @@ Fue en diciembre de 2017 cuando Healthic se puso en marcha en la mente de su fun
 -->
     
     <div class="bread">
+     
       <div class="links">
-          <a href="#">Quienes Somos</a>
+          <a href="#" class="bredtitulo">Quienes Somos</a>
           <a href="#">Nosotros</a>
-          <a href="#">historia</a>
-          <a href="#">Equipo</a>
+          <a href="#">Historia</a>
+<!--          <a href="#">Equipo</a>-->
       </div>
       <div class="links">
-          <a href="#">Esterilización</a>
-          <a href="#">Proceso</a>
+          <a href="#" class="bredtitulo">Esterilización</a>
+          <a href="#">Problemática</a>
+          <a href="#">Solución</a>
           <a href="#">Beneficios</a>
-          <a href="#">Contratación</a>
       </div>
       <div class="links">
-          <a href="#">Desinfección</a>
-          <a href="#">Proceso</a>
+          <a href="#" class="bredtitulo">Desinfección</a>
+          <a href="#">Problemática</a>
+          <a href="#">Solución</a>
           <a href="#">Beneficios</a>
-          <a href="#">Contratación</a>
       </div>
+<!--
       <div class="links">
-          <a href="#">Biblioteca</a>
+          <a href="#" class="bredtitulo">Biblioteca</a>
           <a href="#">Noticias</a>
           <a href="#">Galeria</a>
           <a href="#">Fichas técnicas</a>
           <a href="#">Prensa</a>
       </div>
+-->
+<!--
       <div class="links">
           <a href="#">Contrata un servicio</a>
           <a href="#">Invierte en Healthic</a>
           <a href="#">Trabaja con Nosotros</a>
       </div>
-      <div class="links">
+-->
+      <div class="links ultimis">
           <p>Healthic ® 2020</p>
       </div>
   </div>
