--- a/index.html
+++ b/index.html
@@ -41,40 +41,44 @@
     </div>
 </nav>
     <!--Carusel fotos home-->
-<div id="carouselExampleCaptions" class="carousel slide" data-interval="false" data-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
     <!-- Lineas de referencia posicion -->
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+<!--
     <li data-target="#carouselExampleCaptions" data-slide-to="3"></li>
+    <li data-target="#carouselExampleCaptions" data-slide-to="4"></li>
+-->
   </ol>
   <div class="carousel-inner">
 <!--   Foto 01 -->
     <div class="carousel-item active">
       <img src="img/Home-01.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-md-block">
-        <h1>La primera central de esterilización externa en México</h1>
-        <button>Mas Información</button>
+        <h1>Especialistas en esterilización hospitalaria y desinfección de espacios</h1>
+        <a href="nosotros.html" class="botonLink">Mas Información</a>
       </div>
     </div>
 <!--    Foto 02  -->
     <div class="carousel-item">
-      <img src="img/Home-02.jpg" class="d-block w-100" alt="...">
+      <img src="img/Home-03.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption  d-md-block">
-        <h1>Líderes en bio-desinfección de superficifes para cualquier sector o espacio.</h1>
-        <button>Más información</button>
+        <h1>La primera central de esterilización externa en México</h1>
+        <a href="esterilizacion.html" class="botonLink">Mas Información</a>
       </div>
     </div>
 <!--  Foto 03  -->
     <div class="carousel-item">
-      <img src="img/Home-03.jpg" class="d-block w-100" alt="...">
+      <img src="img/Home-02.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption  d-md-block">
-        <h1>La primera central de esterilización externa en México</h1>
-        <button>Más información</button>
+        <h1>Líderes en bio-desinfección de superficies para cualquier sector o espacio.</h1>
+        <a href="biodesinfeccion.html" class="botonLink">Mas Información</a>
       </div>
     </div>
 <!--  Foto 04  -->
+<!--
     <div class="carousel-item">
       <img src="img/Home-04.jpg" class="d-block w-100" alt="...">
       <div class="carousel-caption d-none d-md-block">
@@ -82,7 +86,8 @@
         <button>Más información</button>
       </div>
     </div>
-    <!--  Foto 05  -->
+-->
+    <!--  Foto 05 VIDEO  -->
 <!--
     <div class="carousel-item">
       <iframe src="https://player.vimeo.com/video/457958887" width="100%" height="100%" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
@@ -464,21 +469,22 @@
       <div class="links">
           <a href="#" class="bredtitulo">Quienes Somos</a>
           <a href="#">Nosotros</a>
-          <a href="#">historia</a>
-          <a href="#">Equipo</a>
+          <a href="#">Historia</a>
+<!--          <a href="#">Equipo</a>-->
       </div>
       <div class="links">
           <a href="#" class="bredtitulo">Esterilización</a>
-          <a href="#">Proceso</a>
+          <a href="#">Problemática</a>
+          <a href="#">Solución</a>
           <a href="#">Beneficios</a>
-          <a href="#">Contratación</a>
       </div>
       <div class="links">
           <a href="#" class="bredtitulo">Desinfección</a>
-          <a href="#">Proceso</a>
+          <a href="#">Problemática</a>
+          <a href="#">Solución</a>
           <a href="#">Beneficios</a>
-          <a href="#">Contratación</a>
       </div>
+<!--
       <div class="links">
           <a href="#" class="bredtitulo">Biblioteca</a>
           <a href="#">Noticias</a>
@@ -486,12 +492,15 @@
           <a href="#">Fichas técnicas</a>
           <a href="#">Prensa</a>
       </div>
+-->
+<!--
       <div class="links">
           <a href="#">Contrata un servicio</a>
           <a href="#">Invierte en Healthic</a>
           <a href="#">Trabaja con Nosotros</a>
       </div>
-      <div class="links">
+-->
+      <div class="links ultimis">
           <p>Healthic ® 2020</p>
       </div>
   </div>
