cambio a imagenes recortadas en nosotros

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
    
     <h3 class="titulo">Quiénes Somos</h3>
     <p class="texto"><b>Healthic ®</b> es un emprendimiento mexicano con una visión de expansión hacia Latinoamérica, en el sector de control de infecciones hospitalarias, industria farmacéutica y de dispositivos médicos. Contamos con el personal más calificado de la industria, procesamos los materiales médicos y quirúrgicos siguiendo los estándares alemanes, suizos y austriacos y operamos con el estado del arte tecnológico. Todos nuestros procesos están estandarizados y validados para garantizar la esterilidad de los productos que llegan con nosotros. Diseñamos, construimos y operamos la primera central de esterilización hospitalaria externa en México, así como el primer servicio de bio-desinfección de espacios físicos a través de peróxido de hidrógeno vaporizado.</p>
-    <a href="" class="boton btnobscuro" >Más información</a>
+    <a href="nosotros.html" class="boton btnobscuro" >Más información</a>
     <figure class="foto">
         <img src="img/logo.png" class="fotoQS">
     </figure>
@@ -128,7 +128,7 @@
    
     <h3 class="titulo">Esterilización externa</h3>
     <p class="texto">Nuestro servicio de outsourcing se realiza en una central diseñada, equipada y operada bajo la normatividad y los estándares nacionales e internacionales aplicables, el estado del arte tecnológico global y lo más importante el mejor talento de México.</p>
-    <button class="boton" >Mas Información</button>
+    <a href="esterilizacion.html" class="botonLink boton">Mas Información</a>
     <figure class="foto">
         <div id="carouselQS" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
@@ -167,7 +167,7 @@
    
     <h3 class="titulo">Bio-desinfección</h3>
     <p class="texto">Es un servicio automatizado para desinfectar y descontaminar cualquier espacio, mediante el uso de vapor de peróxido de hidrógeno. Este proceso de desinfección ha demostrado la inactivación de patógenos altamente resistentes, como COVID-19. Ha sido ampliamente utilizado en el sector salud, alimenticio, corporativo y doméstico.</p>
-    <button class="boton" >Mas Información</button>
+    <a href="biodesinfeccion.html" class="botonLink boton">Mas Información</a>
     <figure class="foto">
         <div id="carouselBD" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
