--- a/nosotros.html
+++ b/nosotros.html
@@ -163,13 +163,13 @@ Fue en diciembre de 2017 cuando Healthic se puso en marcha en la mente de su fun
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/H-01.jpg" class="d-block w-100" alt="...">
+      <img src="img/ee-01.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/H-02.JPG" class="d-block w-100" alt="...">
+      <img src="img/ee-02.webp" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="img/H-03.jpg" class="d-block w-100" alt="...">
+      <img src="img/ee-03.webp" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselQS" role="button" data-slide="prev">
