agregando logo healthic en footer

--- a/esterilizacion.html
+++ b/esterilizacion.html
@@ -189,7 +189,7 @@
            <li>Proceso certificado (ISO 13485) en cumplimiento con los últimos estándares.</li>
        </ul>
    </article>
-    
+    <img src="img/logo02.png" class="imgfooter">
     <div class="bread">
      
       <div class="links">
