--- a/nosotros.html
+++ b/nosotros.html
@@ -501,7 +501,7 @@ Fue en diciembre de 2017 cuando Healthic se puso en marcha en la mente de su fun
         <a href="#" class="btn">Mas informacion</a>
     </article>
 -->
-    
+    <img src="img/logo02.png" class="imgfooter">
     <div class="bread">
      
       <div class="links">
